<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/title_common2" />

    <LinearLayout
        android:id="@+id/curve_add_multicollection_ll"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/curve_add_multicollection" />

        <ImageView
            android:id="@+id/curve_add_multicollection_iv"
            android:layout_width="22dip"
            android:layout_height="15dip"
            android:background="@mipmap/curve_selected" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/color_gray2" />


    <LinearLayout
        android:id="@+id/curve_add_singlecollection_ll"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/curve_add_singlecollection" />

        <ImageView
            android:id="@+id/curve_collect_signle_iv"
            android:layout_width="22dip"
            android:layout_height="15dip"
            android:background="@mipmap/curve_selected" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/color_gray2" />

    <EditText
        android:id="@+id/multicurve_name_et"
        style="@style/list_content"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="@dimen/padding_left"
        android:layout_marginRight="@dimen/padding_right"
        android:layout_marginTop="10dip"
        android:background="@null"
        android:hint="@string/curve_multi_tip"
        android:maxLength="20"
        android:paddingLeft="7dip" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

</LinearLayout>
