<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fefefe"
    android:orientation="vertical">

    <include
        android:id="@+id/title"
        layout="@layout/curve_title"
        android:clipToPadding="true"
        android:fitsSystemWindows="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:layout_marginTop="5dip"

        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/curve_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dip"
                android:gravity="center"
                android:textColor="@color/color_blank3"
                android:textSize="@dimen/font_size_13" />

            <ImageView
                android:id="@+id/curve_calendar_iv"
                android:layout_width="22dip"
                android:layout_height="22dip"
                android:layout_marginLeft="5dip"
                android:src="@mipmap/curve_calendar" />

            <ImageView
                android:id="@+id/curve_back_to_current_iv"
                android:layout_width="22dip"
                android:layout_height="22dip"
                android:layout_marginLeft="25dip"
                android:src="@mipmap/curve_refresh" />

            <TextView
                android:id="@+id/back_to_current_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dip"
                android:text="@string/curve_back_to_current"
                android:textColor="@color/color_blank3"
                android:textSize="@dimen/font_size_13"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/curve_left_arrow_iv"
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_marginLeft="50dip"
                android:layout_marginRight="20dp"
                android:src="@mipmap/curve_left_arrow_blue" />

            <TextView
                android:id="@+id/curve_cycle_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/month"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/font_size_14" />

            <Spinner
                android:id="@+id/curve_cycle_sp"
                android:layout_width="60dip"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/curve_right_arrow_iv"
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/curve_right_arrow_blue" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/curve_refresh_iv"
                android:layout_width="22dip"
                android:layout_height="19dip"
                android:layout_marginLeft="10dp"
                android:background="@mipmap/curve_refresh" />

            <TextView
                android:id="@+id/curve_refresh_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="5dip"
                android:paddingRight="@dimen/padding_right"
                android:text="@string/curve_refresh"
                android:textColor="@color/color_blank3"
                android:textSize="@dimen/font_size_13" />

            <LinearLayout
                android:id="@+id/curve_pick_collection_ll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="15dip"
                android:paddingRight="15dip">

                <ImageView
                    android:id="@+id/curve_pick_collection_iv"
                    android:layout_width="22dip"
                    android:layout_height="22dip"
                    android:background="@mipmap/curve_pick_collection" />

                <TextView
                    android:id="@+id/curve_pick_colletion_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="5dip"
                    android:paddingRight="@dimen/padding_right"
                    android:text="@string/curve_pick_collection"
                    android:textColor="@color/color_blank3"
                    android:textSize="@dimen/font_size_13" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <wendu.dsbridge.DWebView
            android:id="@+id/curve_webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:paddingLeft="30dip"
            android:paddingTop="8dp"
            android:paddingRight="30dip" />

        <LinearLayout
            android:id="@+id/curve_pick_more_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:layout_width="22dip"
                android:layout_height="22dip"
                android:background="@mipmap/curve_pick_collection"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/curve_pick_point"
                android:textSize="@dimen/fs18" />
        </LinearLayout>
    </FrameLayout>


</LinearLayout>
